[package]
name = "nb-digest-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb-chunk-stream-rs = {git="https://github.com/wangjun861205/nb-chunk-stream-rs.git"}
sha2 = "0.9.5"
num_cpus = "1.13"
bytes = "1.0.1"
futures = "0.3.15"
tokio = {version = "1.8", features = ["full"]}